# libechidna

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  vcpkg.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
include/echidna/: buf.hpp  config.hpp  event_hlpr.hpp  event_mgr.hpp  file.hpp  http2.hpp  log.hpp  logutil.hpp  mem.hpp  openssl_mgr.hpp  pipeline.hpp  protomgr.hpp  store.hpp  storeutil.hpp  streams.hpp  string-util.hpp  tcp.hpp  udp.hpp  websocket.hpp
src/: CMakeLists.txt  buf.cpp  config.cpp  event_hlpr.cpp  event_mgr.cpp  file.cpp  http2.cpp  mem.cpp  openssl_mgr.cpp  pipeline.cpp  store.cpp  streams.cpp  string-util.cpp  tcp.cpp  timer.cpp  udp.cpp  websocket.cpp
src/main/util/: string-util.cpp  string-util.h
tests/: CMakeLists.txt  test-ssl.cpp  testcases-buf.cpp  testcases-config.cpp  testcases-file.cpp  testcases-io.cpp  testcases-mem.cpp  testcases-pipeline.cpp  testcases-protobuf.cpp  testcases-store.cpp  testcases-uring.cpp  testcases.cpp
